[tool.poetry]
name = "rct-power"
version = "0.13.1"
description = ""
authors = ["Felix Stürmer <stuermer@weltenwort.de>"]
license = "MIT"

[tool.poetry.dependencies]
async_timeout = "^4.0.0"
homeassistant = "^2025.1.1"
python = ">=3.12,<3.14"
rctclient = "^0.0.3"

[tool.poetry.group.dev.dependencies]
homeassistant-stubs = "^2025.1.1"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-homeassistant-custom-component = "^0.13.202"
mypy-dev = "^1.15.0a1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportImportCycles = "warning"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
