[tool.poetry]
name = "rct-power"
version = "0.14.0"
description = ""
authors = ["Felix Stürmer <stuermer@weltenwort.de>"]
license = "MIT"

[tool.poetry.dependencies]
async_timeout = "^4.0.0"
homeassistant = "^2024.12.0"
python = ">=3.12,<3.14"
rctclient = "^0.0.3"
getmac = "^0.9.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-homeassistant-custom-component = "^0.13.195"
mypy-dev = "^1.15.0a1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportImportCycles = "warning"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

# [[tool.mypy.overrides]]
# module = ["homeassistant.*"]
# follow_untyped_imports = true
