[tool.poetry]
name = "rct-power"
version = "0.14.1"
description = ""
authors = ["Felix Stürmer <stuermer@weltenwort.de>"]
license = "MIT"
packages = [
    { include = "rct_power", from = "custom_components" },
]

[tool.poetry.dependencies]
homeassistant = "^2025.2.4"
python = ">=3.13,<3.14"
rctclient = "^0.0.3"
getmac = "^0.9.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-homeassistant-custom-component = "^0.13.214"
mypy-dev = "^1.15.0a1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["getmac.*"]
follow_untyped_imports = true
